# score-keeper

./: Cargo.toml
backend/: Cargo.toml  Rocket.toml
backend/src/: api.rs  main.rs
backend/static/: 1.app.js  app.js  app.wasm  index.html
frontend/: Cargo.toml  package-lock.json  webpack.config.js
frontend/src/: lib.rs
frontend/src/pages/: app.rs  create_table.rs  mod.rs
